added loadFlag function to show the flags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <div class="wrapper">
   <header>Currency Converter</header>
   <form action="#">
@@ -37,8 +37,8 @@
         </div>
       </div>
     </div>
-    <div class="exchange-rate">Getting exchange rate...</div>
-    <button>Get Exchange Rate</button>
+    <div class="exchange-rate">Calculating...</div>
+    <button>Calculate Currency</button>
   </form>
 </div>
 <!-- partial -->
